# qs_uv_k6_firmware

./: .gitignore  CMakeLists.txt  Makefile  README.md  firmware  main.c
app/: action.c  aircopy.c  app.c  app.h  application.c  battery.c  battery.h  boot.c  boot.h  chFrScanner.c  common.c  common.h  cw.c  cw.h  dtmf.c  fm.c  generic.c  main.c  menu.c  scanner.c  scanner.h  spectrum.c  spectrum.h  uart.c
driver/: backlight.c  bk1080.c  bk4819.c  bk4819.h  flash.c  keyboard.c  st7565.c  systick.c  systick.h  uart.c  uart.h
helper/: battery.c  boot.c
misc/: am_fix.c  audio.c  bitmaps.c  board.c  board.h  dcs.c  debugging.h  font.c  frequencies.c  functions.c  misc.c  radio.c  radio.h  scheduler.c  settings.c  settings.h  sram-overlay.c
ui/: aircopy.c  battery.c  fmradio.c  helper.c  lock.c  main.c  menu.c  menu.h  scanner.c  status.c  ui.c  welcome.c
utils/: clean.sh
